--- a/views/geldAnlegen.ejs
+++ b/views/geldAnlegen.ejs
@@ -26,7 +26,7 @@
         <h2>Geben Sie hier Ihren Wunschbetrag an, um auszurechnen, wieviele Zinsen Sie nach der gewünschten Laufzeit bekommen werden.</h2>
 
         <!--Hier kommt das Formular hin:-->
-
+        <p>Der Zinssatz beträgt 10%.</p>
         <form method="post">
             <!--Das Label zeigt dem Kunden Text im Formular an.-->
             <label>Gewünschter Betrag in Euro</label></br>
